testsuite/tests/tool-ocamlopt-stop-after/stop_after_lambda_warn_error.compilers.reference
File "stop_after_lambda_warn_error.ml", line 12, characters 5-12:
12 | let[@inlined] f x = x
          ^^^^^^^
Error (warning 53 [misplaced-attribute]): the "inlined" attribute cannot appear in this context
